--- a/NYS Holdovers.ipynb
+++ b/NYS Holdovers.ipynb
@@ -53,23 +53,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'df_6' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-2-88550a4c9f21>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mdf_5\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mread_csv\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"sns_g5_2014.csv\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m df_6_2 = df_6[\n\u001b[0m\u001b[1;32m      3\u001b[0m     (df_6['Year'].isin(['2015','2016','2017']))]\n\u001b[1;32m      4\u001b[0m df_5_2 = df_5[\n\u001b[1;32m      5\u001b[0m     (df_5['Group'].isin(['Holdover','All Students']))]\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'df_6' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "df_5 = pd.read_csv(\"sns_g5_2014.csv\")\n",
+    "df_6 = pd.read_csv(\"sns_g6_2014.csv\")\n",
     "df_6_2 = df_6[\n",
     "    (df_6['Year'].isin(['2015','2016','2017']))]\n",
     "df_5_2 = df_5[\n",
@@ -83,7 +72,7 @@
     "**Student who repeated the 5th grade, compared to those who were promoted**\n",
     "---\n",
     "\n",
-    "The graph below shows the NYS test scores of students who were held over in 5th grade in 2015 (red), compared with those who were logged as potential HOs but still promoted (blue). "
+    "The graph below shows the NYS test scores of students who were held over in 5th grade in 2015 (red), compared with those who were logged as potential HOs but still promoted (blue). A third group shows the test scores for all other students in the grade (green)."
    ]
   },
   {
